bugfig; use correct spacing variables

--- a/src/shared/components/super-card/super-card.css
+++ b/src/shared/components/super-card/super-card.css
@@ -33,8 +33,8 @@
 
   &__header{
     display: inline-flex;
-    padding: var(--hw-spacing-smaller);
-    padding-left: var(--hw-spacing-small);
+    padding: var(--hw-spacing-small-3);
+    padding-left: var(--hw-spacing-small-4);
     width:100%;
   }
   &__header-icon{
@@ -47,8 +47,8 @@
   }
   &__header-sub-header{
     width:86%;
-    padding-left: var(--hw-spacing-smaller);
-    padding-top: var(--hw-spacing-smallest);
+    padding-left: var(--hw-spacing-small-3);
+    padding-top: var(--hw-spacing-small-2);
   }
 
   &__media {
@@ -69,7 +69,7 @@
 
   &__body {
     z-index: 1;
-    padding: var(--hw-spacing-small);
+    padding: var(--hw-spacing-small-4);
   }
 
   &__title {
@@ -84,7 +84,7 @@
   }
 
   &__text-primary + .hw-super-card__text-secondary{
-    margin-top: var(--hw-spacing-smaller);
+    margin-top: var(--hw-spacing-small-3);
   }
 
   &__text-secondary {
